Revert "Scheduler - Fix header panel border size"

--- a/scss/widgets/base/_scheduler.scss
+++ b/scss/widgets/base/_scheduler.scss
@@ -362,11 +362,11 @@ $SCHEDULER_APPOINTMENT_FORM_LABEL_PADDING: 20px;
     }
 
     .dx-scheduler-date-table-scrollable {
-      margin-left: $size + $SCHEDULER_LEFT_COLUMN_WIDTH  + 1px + $offset;
+      margin-left: $size + $SCHEDULER_LEFT_COLUMN_WIDTH  + $offset;
     }
 
     .dx-scheduler-header-scrollable.dx-scrollable {
-      margin: 0 0 0 $size + $SCHEDULER_LEFT_COLUMN_WIDTH + 1px + $offset;
+      margin: 0 0 0 $size + $SCHEDULER_LEFT_COLUMN_WIDTH + $offset;
     }
 
     &.dx-rtl {
@@ -842,17 +842,17 @@ $SCHEDULER_APPOINTMENT_FORM_LABEL_PADDING: 20px;
 
     &:not(.dx-scheduler-work-space-vertical-grouped) {
       @include dx-scheduler-scrollable-offset-mixin($SCHEDULER_HEADER_PANEL_OFFSET, $SCHEDULER_ALL_DAY_TABLE_CELL_HEIGHT, $SCHEDULER_COLLAPSED_ALL_DAY_TABLE_CELL_HEIGHT);
-    }
 
-    &:not(.dx-scheduler-work-space-all-day):not(.dx-scheduler-work-space-month):not(.dx-scheduler-timeline) {
-      .dx-scheduler-header-panel {
-        border-bottom: 2px solid $SCHEDULER_BASE_BORDER_COLOR;
+      &:not(.dx-scheduler-work-space-all-day):not(.dx-scheduler-work-space-month):not(.dx-scheduler-timeline) {
+        .dx-scheduler-header-panel {
+          border-bottom: 2px solid $SCHEDULER_BASE_BORDER_COLOR;
+        }
       }
-    }
 
-    &.dx-scheduler-work-space-month:not(.dx-scheduler-work-space-vertical-grouped) {
-      .dx-scheduler-header-panel {
-        border-bottom: $SCHEDULER_BASE_BORDER;
+      &.dx-scheduler-work-space-month {
+        .dx-scheduler-header-panel {
+          border-bottom: $SCHEDULER_BASE_BORDER;
+        }
       }
     }
   }
