--- a/scss/widgets/common/_scheduler.scss
+++ b/scss/widgets/common/_scheduler.scss
@@ -79,8 +79,10 @@ $SCHEDULER_POPUP_SCROLLABLE_CONTENT_PADDING: 20px;
   .dx-scheduler-appointment-content-details {
     margin-top: 2px;
 
-    .dx-scheduler-appointment-content-date {
-      line-height: 0.8;
+    .dx-scheduler-work-space:not(.dx-scheduler-agenda) {
+      .dx-scheduler-appointment-content-date {
+        line-height: 0.8;
+      }
     }
   }
 
