--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -2722,8 +2722,10 @@
 }
 
 .dx-popup-wrapper.dx-scheduler-appointment-tooltip-wrapper,
-.dx-scheduler .dx-scheduler-overlay-panel {
+.dx-scheduler-overlay-panel {
     .dx-overlay-content {
+        position: relative;
+        background: #fff;
         box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
     }
 
