dxScheduler - move mobile tooltip to window(T900555) (#13714)
* fix styles

* dxScheduler - move mobile tooltip to window(T900555) (#13672)

* Fix bug

* Refactoring scheduler styles

* Revert

* Add tests
# Conflicts:
#	scss/widgets/base/_scheduler.scss
#	scss/widgets/common/_scheduler.scss

* fix tests

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -2721,8 +2721,15 @@
     }
 }
 
+.dx-scheduler-overlay-panel {
+    .dx-overlay-content {
+        position: relative;
+        background: #fff;
+    }
+}
+
 .dx-popup-wrapper.dx-scheduler-appointment-tooltip-wrapper,
-.dx-scheduler .dx-scheduler-overlay-panel {
+.dx-scheduler-overlay-panel {
     .dx-overlay-content {
         box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
     }
