--- a/scss/widgets/common/_gridBase.scss
+++ b/scss/widgets/common/_gridBase.scss
@@ -481,8 +481,6 @@
         &.dx-command-edit-with-icons {
           width: $GRID_COMMAND_EDIT_COLUMN_WITH_ICONS_WIDTH;
           min-width: $GRID_COMMAND_EDIT_COLUMN_WITH_ICONS_WIDTH;
-          line-height: 1;
-          white-space: nowrap;
 
           .dx-link {
             text-decoration: none;
@@ -507,6 +505,11 @@
         padding: 0;
         vertical-align: middle;
       }
+    }
+
+    .dx-data-row .dx-command-edit-with-icons {
+      line-height: 1;
+      white-space: nowrap;
     }
 
     .dx-filter-range-content {
