--- a/scss/widgets/base/scheduler/_index.scss
+++ b/scss/widgets/base/scheduler/_index.scss
@@ -25,6 +25,7 @@ $SCHEDULER_DD_APPOINTMENT_HOVER_TEXT_COLOR: null !default;
 @use "./tooltip" with (
   $SCHEDULER_APPOINTMENT_BASE_COLOR: $SCHEDULER_APPOINTMENT_BASE_COLOR
 );
+@use "./appointment";
 
 $SCHEDULER_NAVIGATOR_OFFSET: 10px;
 $SCHEDULER_SWITCHER_OFFSET: 10px;
@@ -2017,13 +2018,6 @@ $SCHEDULER_APPOINTMENT_FORM_LABEL_PADDING: 20px;
     .dx-scheduler-work-space-month & {
       display: none;
     }
-  }
-
-  .dx-scheduler-appointment-content-date {
-    opacity: 0.7;
-    display: inline-block;
-
-    @include dx-overflow();
   }
 
   .dx-scheduler-appointment-popup {
