dxGantt: Fix row height in Safari and FF for Ubuntu (T891724, T872333)

--- a/styles/widgets/generic/size-schemes/compact.less
+++ b/styles/widgets/generic/size-schemes/compact.less
@@ -68,6 +68,7 @@
 @GANTT_MILESTONE_SIZE: 12px;
 @GANTT_CV_DIALOG_PADDING_BOTTOM: 10px;
 @GANTT_CV_DIALOG_ROW_PADDING_TOP: 10px;
+@GANTT_TREELIST_TEXT_MIN_HEIGHT: 16px;
 
 @GENERIC_CHECKBOX_SIZE: 16px;
 @GENERIC_SWITCH_HEIGHT: 18px;
