--- a/styles/widgets/generic/size-schemes/default.less
+++ b/styles/widgets/generic/size-schemes/default.less
@@ -70,6 +70,7 @@
 @GANTT_MILESTONE_SIZE: 14px;
 @GANTT_CV_DIALOG_PADDING_BOTTOM: 8px;
 @GANTT_CV_DIALOG_ROW_PADDING_TOP: 12px;
+@GANTT_TREELIST_TEXT_MIN_HEIGHT: 19px;
 
 @GENERIC_CHECKBOX_SIZE: 22px;
 @GENERIC_SWITCH_HEIGHT: 24px;
