--- a/scss/widgets/generic/_sizes.scss
+++ b/scss/widgets/generic/_sizes.scss
@@ -58,6 +58,7 @@ $GANTT_DEPENDENCY_SUCCESSOR_SIZE: null !default;
 $GANTT_MILESTONE_SIZE: null !default;
 $GANTT_CV_DIALOG_PADDING_BOTTOM: null !default;
 $GANTT_CV_DIALOG_ROW_PADDING_TOP: null !default;
+$GANTT_TREELIST_TEXT_MIN_HEIGHT: null !default;
 $GENERIC_CHECKBOX_SIZE: null !default;
 $GENERIC_SWITCH_HEIGHT: null !default;
 $GENERIC_SLIDER_HEIGHT: null !default;
@@ -137,6 +138,7 @@ $GENERIC_LIST_ITEM_VERTICAL_PADDING: null !default;
   $GANTT_MILESTONE_SIZE: 14px;
   $GANTT_CV_DIALOG_PADDING_BOTTOM: 8px;
   $GANTT_CV_DIALOG_ROW_PADDING_TOP: 12px;
+  $GANTT_TREELIST_TEXT_MIN_HEIGHT: 19px;
 
   $GENERIC_CHECKBOX_SIZE: 22px;
   $GENERIC_SWITCH_HEIGHT: 24px;
@@ -216,6 +218,7 @@ $GENERIC_LIST_ITEM_VERTICAL_PADDING: null !default;
   $GANTT_MILESTONE_SIZE: 12px;
   $GANTT_CV_DIALOG_PADDING_BOTTOM: 10px;
   $GANTT_CV_DIALOG_ROW_PADDING_TOP: 10px;
+  $GANTT_TREELIST_TEXT_MIN_HEIGHT: 16px;
 
   $GENERIC_CHECKBOX_SIZE: 16px;
   $GENERIC_SWITCH_HEIGHT: 18px;
