--- a/scss/widgets/base/scheduler/_appointment.scss
+++ b/scss/widgets/base/scheduler/_appointment.scss
@@ -1,5 +1,5 @@
 .dx-scheduler-appointment-content-date {
   opacity: 0.7;
   display: inline-block;
-  white-space: break-spaces;
+  white-space: pre-wrap;
 }
