Remove extra border for banded columns headers in material theme (T914162)

--- a/styles/widgets/material/gridBase.material.less
+++ b/styles/widgets/material/gridBase.material.less
@@ -691,6 +691,10 @@
                         vertical-align: bottom;
                         border-right: 1px solid @MATERIAL_GRID_BASE_BORDER_COLOR;
                     }
+
+                    &:last-child {
+                        border-right: none;
+                    }
                 }
             }
         }
