--- a/scss/widgets/common/_tabs.scss
+++ b/scss/widgets/common/_tabs.scss
@@ -128,7 +128,7 @@ $icon_size: 16px;
   max-width: 100%;
   -webkit-user-drag: none;
 
-  @include dx-overflow;
+  @include dx-overflow();
 }
 
 .dx-tabs-item-badge {
