--- a/scss/widgets/generic/dropDownEditor/_index.scss
+++ b/scss/widgets/generic/dropDownEditor/_index.scss
@@ -22,10 +22,7 @@ $GENERIC_DROPDOWNEDITOR_INVALID_BADGE_OFFSET:
   $GENERIC_DROPDOWNEDITOR_CONTAINER_BUTTON_SIZE +
   $GENERIC_INVALID_BADGE_HALFHORIZONTAL_PADDING;
 
-
-$GENERIC_DROPDOWNEDITOR_INVALID_BADGE_WITH_CLEAR_OFFSET:
-  $GENERIC_DROPDOWNEDITOR_CONTAINER_BUTTON_SIZE * 2;
-
+$GENERIC_DROPDOWNEDITOR_INVALID_BADGE_WITH_CLEAR_OFFSET: $GENERIC_DROPDOWNEDITOR_CONTAINER_BUTTON_SIZE * 2;
 
 $GENERIC_DROPDOWNEDITOR_INVALID_BADGE_SIZE: $GENERIC_INVALID_BADGE_SIZE + $GENERIC_INVALID_BADGE_HORIZONTAL_PADDING;
 
