--- a/scss/widgets/material/_sizes.scss
+++ b/scss/widgets/material/_sizes.scss
@@ -223,16 +223,18 @@ $MATERIAL_LIST_ITEM_HEIGHT: null !default;
 
 // Base inline widgets paddings
 $MATERIAL_BASE_INLINE_WIDGET_VERTICAL_PADDING:
-    $MATERIAL_BASE_INLINE_WIDGET_HEIGHT - $MATERIAL_BASE_INLINE_BLOCK_HEIGHT;
-$MATERIAL_BASE_INLINE_WIDGET_TOP_PADDING:
-    floor($MATERIAL_BASE_INLINE_WIDGET_VERTICAL_PADDING/2);
+  $MATERIAL_BASE_INLINE_WIDGET_HEIGHT -
+  $MATERIAL_BASE_INLINE_BLOCK_HEIGHT;
+$MATERIAL_BASE_INLINE_WIDGET_TOP_PADDING: floor($MATERIAL_BASE_INLINE_WIDGET_VERTICAL_PADDING/2);
 
 // Base bordered inline widgets sizes
 $MATERIAL_BASE_BORDER_WIDTH: 1px;
 $MATERIAL_BASE_INLINE_BORDEREDWIDGET_INNER_SIZE:
-    $MATERIAL_BASE_INLINE_WIDGET_HEIGHT - $MATERIAL_BASE_BORDER_WIDTH * 2;
+  $MATERIAL_BASE_INLINE_WIDGET_HEIGHT -
+  $MATERIAL_BASE_BORDER_WIDTH * 2;
 $MATERIAL_BASE_INLINE_BORDEREDWIDGET_TOP_PADDING:
-    $MATERIAL_BASE_INLINE_WIDGET_TOP_PADDING - $MATERIAL_BASE_BORDER_WIDTH;
+  $MATERIAL_BASE_INLINE_WIDGET_TOP_PADDING -
+  $MATERIAL_BASE_BORDER_WIDTH;
 
 $MATERIAL_SLIDER_HEIGHT: 28px;
 $MATERIAL_RADIOGROUP_MIN_HEIGHT: 26px;
