--- a/scss/widgets/generic/treeList/_index.scss
+++ b/scss/widgets/generic/treeList/_index.scss
@@ -29,7 +29,7 @@
 @include grid-base(treelist);
 
 $TREELIST_EMPTY_SPACE_WIDTH: 14px;
-$TREELIST_SELECT_ALL_CHECKBOX_MARGIN_TOP: floor((round($GENERIC_BASE_LINE_HEIGHT*$GENERIC_BASE_FONT_SIZE) - $GENERIC_GRID_BASE_CHECKBOX_ICON_SIZE)/2);
+$TREELIST_SELECT_ALL_CHECKBOX_MARGIN_TOP: floor((round($GENERIC_BASE_LINE_HEIGHT * $GENERIC_BASE_FONT_SIZE) - $GENERIC_GRID_BASE_CHECKBOX_ICON_SIZE) / 2);
 $TREELIST_CHECKBOX_OFFSET_LEFT: $TREELIST_EMPTY_SPACE_WIDTH + $GENERIC_GRID_BASE_CELL_PADDING;
 $TREELIST_CHECKBOX_OFFSET_LEFT_RTL: $TREELIST_CHECKBOX_OFFSET_LEFT + $GENERIC_GRID_BASE_CHECKBOX_ICON_SIZE;
 $TREELIST_EDITOR_CELL_PADDING_LEFT: $TREELIST_CHECKBOX_OFFSET_LEFT_RTL + $GENERIC_GRID_BASE_CELL_PADDING;
@@ -118,7 +118,7 @@ $TREELIST_ICON_CONTAINER_PADDING_RIGHT: $GENERIC_GRID_BASE_CHECKBOX_ICON_SIZE + 
 
   .dx-checkbox {
     top: 50%;
-    margin-top: -$GENERIC_GRID_BASE_CHECKBOX_ICON_SIZE/2;
+    margin-top: -$GENERIC_GRID_BASE_CHECKBOX_ICON_SIZE / 2;
   }
 }
 
