--- a/scss/widgets/material/_sizes.scss
+++ b/scss/widgets/material/_sizes.scss
@@ -111,7 +111,7 @@ $MATERIAL_LIST_ITEM_HEIGHT: null !default;
 
   $TREELIST_EXPANDED_ICON_MARGIN_LEFT: 5px;
   $TREELIST_COLLAPSED_ICON_MARGIN_LEFT: 6px;
-  $TREELIST_ICON_MARGIN_TOP: $MATERIAL_BASE_ICON_SIZE/2;
+  $TREELIST_ICON_MARGIN_TOP: $MATERIAL_BASE_ICON_SIZE / 2;
 
   $dropdown-widgets-shadow: 0 2px 7px $base-dropdown-shadow-color;
 
@@ -191,7 +191,7 @@ $MATERIAL_LIST_ITEM_HEIGHT: null !default;
 
   $TREELIST_EXPANDED_ICON_MARGIN_LEFT: 5px;
   $TREELIST_COLLAPSED_ICON_MARGIN_LEFT: 6px;
-  $TREELIST_ICON_MARGIN_TOP: $MATERIAL_BASE_ICON_SIZE/2;
+  $TREELIST_ICON_MARGIN_TOP: $MATERIAL_BASE_ICON_SIZE / 2;
 
   $dropdown-widgets-shadow: 0 2px 4px $base-dropdown-shadow-color;
 
@@ -225,7 +225,7 @@ $MATERIAL_LIST_ITEM_HEIGHT: null !default;
 $MATERIAL_BASE_INLINE_WIDGET_VERTICAL_PADDING:
   $MATERIAL_BASE_INLINE_WIDGET_HEIGHT -
   $MATERIAL_BASE_INLINE_BLOCK_HEIGHT;
-$MATERIAL_BASE_INLINE_WIDGET_TOP_PADDING: floor($MATERIAL_BASE_INLINE_WIDGET_VERTICAL_PADDING/2);
+$MATERIAL_BASE_INLINE_WIDGET_TOP_PADDING: floor($MATERIAL_BASE_INLINE_WIDGET_VERTICAL_PADDING / 2);
 
 // Base bordered inline widgets sizes
 $MATERIAL_BASE_BORDER_WIDTH: 1px;
