--- a/scss/widgets/material/treeList/_index.scss
+++ b/scss/widgets/material/treeList/_index.scss
@@ -128,7 +128,7 @@ $TREELIST_ICON_CONTAINER_PADDING_RIGHT: $MATERIAL_GRID_BASE_CHECKBOX_SIZE + $MAT
 
     .dx-checkbox {
       top: 50%;
-      margin-top: -$MATERIAL_GRID_BASE_CHECKBOX_SIZE/2;
+      margin-top: -$MATERIAL_GRID_BASE_CHECKBOX_SIZE / 2;
     }
   }
 }
@@ -138,7 +138,7 @@ $TREELIST_ICON_CONTAINER_PADDING_RIGHT: $MATERIAL_GRID_BASE_CHECKBOX_SIZE + $MAT
 
   .dx-checkbox {
     left: $TREELIST_CHECKBOX_OFFSET_LEFT;
-    top: ($MATERIAL_GRID_BASE_HEADER_HEIGHT - $MATERIAL_GRID_BASE_CHECKBOX_SIZE)/2;
+    top: ($MATERIAL_GRID_BASE_HEADER_HEIGHT - $MATERIAL_GRID_BASE_CHECKBOX_SIZE) / 2;
   }
 }
 
