--- a/scss/widgets/generic/common/_index.scss
+++ b/scss/widgets/generic/common/_index.scss
@@ -100,7 +100,7 @@ $badge-invalid-bg: $base-invalid-color;
   font-weight: bold;
   position: absolute;
   top: 50%;
-  margin-top: -$GENERIC_INVALID_BADGE_SIZE/2;
+  margin-top: -$GENERIC_INVALID_BADGE_SIZE / 2;
   width: $GENERIC_INVALID_BADGE_SIZE;
   height: $GENERIC_INVALID_BADGE_SIZE;
   text-align: center;
@@ -131,7 +131,7 @@ $badge-invalid-bg: $base-invalid-color;
   pointer-events: none;
   position: absolute;
   top: 50%;
-  margin-top: -$GENERIC_PENDING_INDICATOR_SIZE/2;
+  margin-top: -$GENERIC_PENDING_INDICATOR_SIZE / 2;
   width: $GENERIC_PENDING_INDICATOR_SIZE;
   height: $GENERIC_PENDING_INDICATOR_SIZE;
 }
