--- a/scss/widgets/generic/gallery/_index.scss
+++ b/scss/widgets/generic/gallery/_index.scss
@@ -85,7 +85,7 @@
   box-sizing: border-box;
   border: 1px solid $gallery-indicator-item-border-color;
   pointer-events: auto;
-  margin: 5px - $GENERIC_GALLERY_INDICATOR_SIZE/2 6px;
+  margin: 5px - $GENERIC_GALLERY_INDICATOR_SIZE / 2 6px;
   width: $GENERIC_GALLERY_INDICATOR_SIZE;
   height: $GENERIC_GALLERY_INDICATOR_SIZE;
   background: $gallery-indicator-bg;
@@ -97,7 +97,7 @@
   height: $GENERIC_GALLERY_INDICATOR_SELECTED_SIZE;
   background: $gallery-indicator-item-selected-bg;
   border: 2px solid $gallery-indicator-selected-border-color;
-  margin: 5px - $GENERIC_GALLERY_INDICATOR_SELECTED_SIZE/2 6px;
+  margin: 5px - $GENERIC_GALLERY_INDICATOR_SELECTED_SIZE / 2 6px;
 }
 
 .dx-state-focused.dx-gallery {
