--- a/scss/widgets/generic/slideOut/_index.scss
+++ b/scss/widgets/generic/slideOut/_index.scss
@@ -12,8 +12,8 @@ $GENERIC_SLIDEOUT_MENU_ICON_SIZE: $GENERIC_BASE_ICON_SIZE + $GENERIC_SLIDEOUT_ME
 
 .dx-slideout-menu .dx-list-item .dx-icon {
   @include dx-icon-sizing($GENERIC_SLIDEOUT_MENU_ICON_SIZE);
-  @include dx-icon-margin($GENERIC_SLIDEOUT_MENU_ICON_SIZE/2);
+  @include dx-icon-margin($GENERIC_SLIDEOUT_MENU_ICON_SIZE / 2);
 
-  margin-top: -$GENERIC_SLIDEOUT_MENU_ICON_OVERSIZE/2;
-  margin-bottom: -$GENERIC_SLIDEOUT_MENU_ICON_OVERSIZE/2;
+  margin-top: -$GENERIC_SLIDEOUT_MENU_ICON_OVERSIZE / 2;
+  margin-bottom: -$GENERIC_SLIDEOUT_MENU_ICON_OVERSIZE / 2;
 }
