--- a/scss/widgets/material/gallery/_index.scss
+++ b/scss/widgets/material/gallery/_index.scss
@@ -87,7 +87,7 @@
   box-sizing: border-box;
   border: 1px solid $gallery-indicator-item-border-color;
   pointer-events: auto;
-  margin: 5px - $MATERIAL_GALLERY_INDICATOR_SIZE/2 6px;
+  margin: 5px - $MATERIAL_GALLERY_INDICATOR_SIZE / 2 6px;
   width: $MATERIAL_GALLERY_INDICATOR_SIZE;
   height: $MATERIAL_GALLERY_INDICATOR_SIZE;
   background: $gallery-indicator-bg;
@@ -99,7 +99,7 @@
   height: $MATERIAL_GALLERY_INDICATOR_SELECTED_SIZE;
   background: $gallery-indicator-item-selected-bg;
   border: 2px solid $gallery-indicator-selected-border-color;
-  margin: 5px - $MATERIAL_GALLERY_INDICATOR_SELECTED_SIZE/2 6px;
+  margin: 5px - $MATERIAL_GALLERY_INDICATOR_SELECTED_SIZE / 2 6px;
 }
 
 
