--- a/scss/widgets/material/list/_index.scss
+++ b/scss/widgets/material/list/_index.scss
@@ -282,7 +282,7 @@ $MATERIAL_LIST_ITEM_BORDER: $MATERIAL_LIST_ITEM_BORDER_WIDTH solid $list-border-
   }
 
   .dx-list .dx-empty-message { // stylelint-disable-line no-duplicate-selectors
-    padding: $MATERIAL_LIST_ITEM_VERTICAL_PADDING/2 + 1px $item_horizontal_padding $MATERIAL_LIST_ITEM_VERTICAL_PADDING/2;
+    padding: $MATERIAL_LIST_ITEM_VERTICAL_PADDING / 2 + 1px $item_horizontal_padding $MATERIAL_LIST_ITEM_VERTICAL_PADDING / 2;
     color: color.change($list-normal-color, $alpha: 0.54);
     font-size: 12px;
   }
@@ -301,7 +301,7 @@ $MATERIAL_LIST_ITEM_BORDER: $MATERIAL_LIST_ITEM_BORDER_WIDTH solid $list-border-
 
   .dx-list-item-chevron-container {
     width: 11px + $item_horizontal_padding;
-    padding-top: $MATERIAL_LIST_ITEM_VERTICAL_PADDING/2;
+    padding-top: $MATERIAL_LIST_ITEM_VERTICAL_PADDING / 2;
   }
 
   .dx-list-border-visible {
@@ -444,7 +444,7 @@ $MATERIAL_LIST_ITEM_BORDER: $MATERIAL_LIST_ITEM_BORDER_WIDTH solid $list-border-
   }
 
   .dx-list-switchable-delete-button-inner-wrapper {
-    padding-right: ($MATERIAL_LIST_ITEM_HEIGHT - $MATERIAL_BUTTON_HEIGHT)/2;
+    padding-right: ($MATERIAL_LIST_ITEM_HEIGHT - $MATERIAL_BUTTON_HEIGHT) / 2;
     background-color: $base-bg;
   }
 
@@ -497,7 +497,7 @@ $MATERIAL_LIST_ITEM_BORDER: $MATERIAL_LIST_ITEM_BORDER_WIDTH solid $list-border-
     }
 
     .dx-list-switchable-delete-button-inner-wrapper {
-      padding-left: ($MATERIAL_LIST_ITEM_HEIGHT - $MATERIAL_BUTTON_HEIGHT)/2;
+      padding-left: ($MATERIAL_LIST_ITEM_HEIGHT - $MATERIAL_BUTTON_HEIGHT) / 2;
       padding-right: 0;
     }
   }
