DataGrid: Fix validation message appearance with long text in Firefox if column fixing is enabled (T913696)

--- a/scss/widgets/common/_gridBase.scss
+++ b/scss/widgets/common/_gridBase.scss
@@ -65,6 +65,8 @@
             visibility: hidden;
             background-color: transparent;
             pointer-events: none;
+            border-top-color: transparent; // T913696
+            border-bottom-color: transparent; // T913696
           }
         }
 
