--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -84,6 +84,8 @@
                         visibility: hidden;
                         background-color: transparent;
                         pointer-events: none;
+                        border-top-color: transparent; // T913696
+                        border-bottom-color: transparent; // T913696
                     }
                 }
 
