--- a/scss/widgets/generic/button/_index.scss
+++ b/scss/widgets/generic/button/_index.scss
@@ -29,9 +29,9 @@ $generic-editor-custom-button-margin: 1px;
   text-decoration: none;
 }
 
-@mixin dx-button-sizing($-p-a-d-d-i-n-g, $icon-size, $icon-margin) {
+@mixin dx-button-sizing($padding, $icon-size, $icon-margin) {
   .dx-button-content {
-    padding: $-p-a-d-d-i-n-g;
+    padding: $padding;
   }
 
   .dx-icon {
