--- a/scss/widgets/common/_gridBase.scss
+++ b/scss/widgets/common/_gridBase.scss
@@ -66,6 +66,8 @@
             visibility: hidden;
             background-color: transparent;
             pointer-events: none;
+            border-top-color: transparent; // T913696
+            border-bottom-color: transparent; // T913696
           }
         }
 
