--- a/scss/widgets/base/_mixins.scss
+++ b/scss/widgets/base/_mixins.scss
@@ -95,3 +95,39 @@
     }
   }
 }
+
+@mixin disabled-widget-mixin($opacity) {
+  opacity: $opacity;
+
+  @include user-select(none);
+
+  cursor: default;
+}
+
+@mixin dx-base-typography-mixin(
+  $color,
+  $font-size,
+  $font-family,
+  $line-height
+) {
+  color: $color;
+  font-weight: normal;
+  font-size: $font-size;
+  font-family: $font-family;
+  line-height: $line-height;
+
+  input,
+  textarea {
+    font-family: $font-family;
+    line-height: $line-height;
+  }
+}
+
+@mixin dx-pending-indicator($indicator-size) {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  margin-top: -$indicator-size / 2;
+  width: $indicator-size;
+  height: $indicator-size;
+}
